# rigcontrol

./: .gitignore  .gitmodules  CMakeLists.txt  FIX  README.md  firmware  index.html  make_firmware_archive.sh  partitions.csv  sdkconfig  web_template.c  web_template.cpp
components/commands/: CMakeLists.txt  commands.c  date.c  date.cxx  ddns.c  ddns.cxx  fds.c  gpio.c  gpio.cxx  nonvolatile.c  param.c  param.cxx  param_cmd.c  pcp.c  public_ip.c  public_ip_cmd.c  public_ip_cmd.cxx  realtime_tasks.c  restart.c  restart.cxx  stun.c  tasks.c  tasks.cxx  uptime.c  uptime.cxx  utility.c  web_get.c  wget.c  wget.cxx
components/commands/include/: commands.h
components/crofs/: CMakeLists.txt  Kconfig.projbuild  crofs.cpp  mount.cpp
components/crofs/include/: crofs.h
components/crofs/miniz/: README.md  miniz.c  miniz.h
components/generic_main/: CMakeLists.txt  README.md  address_types.c  all_zeroes.c  array.c  choose_one.c  command.c  command.cxx  compressed_fs.c  compressed_fs.cr  dynamic_dns.c  event_loop.c  event_server.c  generate_git_version.sh  generic_main.c  generic_main.cxx  global.c  icmpv6.c  improv_wifi.c  log_server.c  nonvolatile.c  param.c  param_parse.c  param_web.cpp  pattern_string.c  port_control_protocol.c  printf.c  public_ip.c  select_task.c  stun.c  system_task.c  timer_to_human.c  timer_to_human.cxx  uri_decode.c  uri_param.c  uri_parse.c  web_get.c  web_handlers.c  web_template.c  web_template.cxx  (+2 more)
components/generic_main/filesystem_generator/: fs_gen.c  fs_read.c  magic.c
components/generic_main/include/: compressed_fs.h  generic_main.h  public_ip.h  web_get.h  web_template.h  web_template.hxx
components/generic_main/web/: buttons.c  get_params.c
components/hamlib/: CMakeLists.txt
components/hamlib/include/hamlib/: config.h
components/miniz/: CMakeLists.txt  README.md  miniz.c
components/miniz/include/: miniz.h
components/non_profit_only/: CMakeLists.txt  duck_duck_go.c  non_profit_only.c
components/puff/: CMakeLists.txt  LICENSE  README.md  puff.c
components/puff/include/: puff.h
components/web_handlers/: CMakeLists.txt  boilerplate.c  buttons.c  post_parameter.c  set_nonvolatile_get.c  set_nonvolatile_post.c  set_parameter.c  setting_get.c  setting_post.c  settings.c
components/web_handlers/include/: web_template.h
doc/: SECURITY_ISSUES.txt
filesystem/: index.html
main/: CMakeLists.txt  example_user_command.c  example_user_command.cxx  main.c  smartconfig_main.c  user.c  user_commands.c  user_web_handlers.c  user_web_handlers.cxx  webserver.c  wifi.c
scripts/: make_firmware_archive.sh
