idf_component_register(
SRCS
  user.c
  user_web_handlers.c
INCLUDE_DIRS
  .
# Components must be listed before any other components that they depend upon.
REQUIRES
  commands
  console
  crofs
  driver
  esp_http_server
  esp_timer
  freertos
  generic_main
  hal
  lwip
  nvs_flash
  tcpip_adapter
)
