idf_component_register(
SRCS
  date.cxx
  ddns.cxx
  gpio.cxx
  param.cxx
  public_ip_cmd.cxx
  realtime_tasks.cxx
  restart.cxx
  tasks.cxx
  uptime.cxx
  wget.cxx
INCLUDE_DIRS
  .
  include
REQUIRES
  console
  driver
  esp_http_client
  esp_timer
  esp-tls
  freertos
  generic_main
  hal
  json
  lwip
  nvs_flash
)
idf_build_set_property(LINK_OPTIONS "-Wl,--whole-archive esp-idf/commands/libcommands.a -Wl,--no-whole-archive" APPEND)
