idf_component_register(
SRCS
  date.c
  ddns.c
  gpio.c
  param.c
  public_ip_cmd.c
  realtime_tasks.c
  restart.c
  tasks.c
  uptime.c
  wget.c
INCLUDE_DIRS
  .
  include
REQUIRES
  console
  driver
  esp_http_client
  esp_timer
  esp-tls
  freertos
  generic_main
  hal
  json
  lwip
  nvs_flash
)
idf_build_set_property(LINK_OPTIONS "-Wl,--whole-archive esp-idf/commands/libcommands.a -Wl,--no-whole-archive" APPEND)
