# LEFT OUT
# ./Hamlib/rigs/winradio/g313-posix.c
# ./Hamlib/rigs/winradio/linradio/wrg313api.c
# serial.c network.c
idf_component_register(
SRCS
  ./Hamlib/src/cache.c
  ./Hamlib/src/ext.c
  ./Hamlib/src/conf.c
  ./Hamlib/src/misc.c
  ./Hamlib/src/iofunc.c
  ./Hamlib/src/locator.c
  ./Hamlib/src/amp_reg.c
  ./Hamlib/src/rotator.c
  ./Hamlib/src/cm108.c
  ./Hamlib/src/sleep.c
  ./Hamlib/src/amp_settings.c
  ./Hamlib/src/mem.c
  ./Hamlib/src/parallel.c
  ./Hamlib/src/register.c
  ./Hamlib/src/rot_reg.c
  ./Hamlib/src/amp_conf.c
  ./Hamlib/src/rot_conf.c
  ./Hamlib/src/gpio.c
  ./Hamlib/src/usb_port.c
  ./Hamlib/src/rot_settings.c
  ./Hamlib/src/microham.c
  ./Hamlib/src/sprintflst.c
  ./Hamlib/src/cal.c
  ./Hamlib/src/event.c
  ./Hamlib/src/debug.c
  ./Hamlib/src/rot_ext.c
  ./Hamlib/src/rig.c
  ./Hamlib/src/extamp.c
  ./Hamlib/src/snapshot_data.c
  ./Hamlib/src/amplifier.c
  ./Hamlib/src/tones.c
  ./Hamlib/src/settings.c
  ./Hamlib/amplifiers/elecraft/kpa1500.c
  ./Hamlib/amplifiers/elecraft/kpa.c
  ./Hamlib/rigs/dorji/dorji.c
  ./Hamlib/rigs/dorji/dra818.c
  ./Hamlib/rigs/rft/rft.c
  ./Hamlib/rigs/rft/ekd500.c
  ./Hamlib/rigs/elad/fdm_duo.c
  ./Hamlib/rigs/elad/elad.c
  ./Hamlib/rigs/wj/wj8888.c
  ./Hamlib/rigs/wj/wj.c
  ./Hamlib/rigs/kenwood/tmd700.c
  ./Hamlib/rigs/kenwood/ts50s.c
  ./Hamlib/rigs/kenwood/ts140.c
  ./Hamlib/rigs/kenwood/ts590.c
  ./Hamlib/rigs/kenwood/ts811.c
  ./Hamlib/rigs/kenwood/thd74.c
  ./Hamlib/rigs/kenwood/ts440.c
  ./Hamlib/rigs/kenwood/ts480.c
  ./Hamlib/rigs/kenwood/thf6a.c
  ./Hamlib/rigs/kenwood/r5000.c
  ./Hamlib/rigs/kenwood/trc80.c
  ./Hamlib/rigs/kenwood/ts990s.c
  ./Hamlib/rigs/kenwood/ic10.c
  ./Hamlib/rigs/kenwood/ts940.c
  ./Hamlib/rigs/kenwood/flex6xxx.c
  ./Hamlib/rigs/kenwood/ts450s.c
  ./Hamlib/rigs/kenwood/flex.c
  ./Hamlib/rigs/kenwood/ts711.c
  ./Hamlib/rigs/kenwood/transfox.c
  ./Hamlib/rigs/kenwood/ts570.c
  ./Hamlib/rigs/kenwood/tx500.c
  ./Hamlib/rigs/kenwood/ts790.c
  ./Hamlib/rigs/kenwood/tmd710.c
  ./Hamlib/rigs/kenwood/ts930.c
  ./Hamlib/rigs/kenwood/ts870s.c
  ./Hamlib/rigs/kenwood/ts890s.c
  ./Hamlib/rigs/kenwood/k3.c
  ./Hamlib/rigs/kenwood/thd7.c
  ./Hamlib/rigs/kenwood/thg71.c
  ./Hamlib/rigs/kenwood/thd72.c
  ./Hamlib/rigs/kenwood/kenwood.c
  ./Hamlib/rigs/kenwood/ts680.c
  ./Hamlib/rigs/kenwood/tmv7.c
  ./Hamlib/rigs/kenwood/ts690.c
  ./Hamlib/rigs/kenwood/thf7.c
  ./Hamlib/rigs/kenwood/k2.c
  ./Hamlib/rigs/kenwood/pihpsdr.c
  ./Hamlib/rigs/kenwood/ts850.c
  ./Hamlib/rigs/kenwood/xg3.c
  ./Hamlib/rigs/kenwood/th.c
  ./Hamlib/rigs/kenwood/elecraft.c
  ./Hamlib/rigs/kenwood/ts2000.c
  ./Hamlib/rigs/kenwood/ts950.c
  ./Hamlib/rigs/rs/rs.c
  ./Hamlib/rigs/rs/esmc.c
  ./Hamlib/rigs/rs/gp2000.c
  ./Hamlib/rigs/rs/eb200.c
  ./Hamlib/rigs/rs/xk2100.c
  ./Hamlib/rigs/tapr/tapr.c
  ./Hamlib/rigs/tapr/dsp10.c
  ./Hamlib/rigs/lowe/hf235.c
  ./Hamlib/rigs/lowe/lowe.c
  ./Hamlib/rigs/flexradio/dttsp.c
  ./Hamlib/rigs/flexradio/flexradio.c
  ./Hamlib/rigs/flexradio/sdr1k.c
  ./Hamlib/rigs/alinco/alinco.c
  ./Hamlib/rigs/alinco/dxsr8.c
  ./Hamlib/rigs/alinco/dx77.c
  ./Hamlib/rigs/gomspace/gs100.c
  ./Hamlib/rigs/uniden/bcd396t.c
  ./Hamlib/rigs/uniden/uniden_digital.c
  ./Hamlib/rigs/uniden/bc895.c
  ./Hamlib/rigs/uniden/bc780.c
  ./Hamlib/rigs/uniden/bc245.c
  ./Hamlib/rigs/uniden/bc250.c
  ./Hamlib/rigs/uniden/bcd996t.c
  ./Hamlib/rigs/uniden/uniden.c
  ./Hamlib/rigs/uniden/bc898.c
  ./Hamlib/rigs/uniden/pro2052.c
  ./Hamlib/rigs/kit/dwt.c
  ./Hamlib/rigs/kit/pcrotor.c
  ./Hamlib/rigs/kit/usrp.c
  ./Hamlib/rigs/kit/rs_hfiq.c
  ./Hamlib/rigs/kit/si570avrusb.c
  ./Hamlib/rigs/kit/fifisdr.c
  ./Hamlib/rigs/kit/miniVNA.c
  ./Hamlib/rigs/kit/elektor304.c
  ./Hamlib/rigs/kit/elektor507.c
  ./Hamlib/rigs/kit/kit.c
  ./Hamlib/rigs/kit/drt1.c
  ./Hamlib/rigs/kit/funcube.c
  ./Hamlib/rigs/kit/dds60.c
  ./Hamlib/rigs/kit/hiqsdr.c
  ./Hamlib/rigs/pcr/pcr2500.c
  ./Hamlib/rigs/pcr/pcr1000.c
  ./Hamlib/rigs/pcr/pcr.c
  ./Hamlib/rigs/pcr/pcr100.c
  ./Hamlib/rigs/pcr/pcr1500.c
  ./Hamlib/rigs/yaesu/frg9600.c
  ./Hamlib/rigs/yaesu/ft990.c
  ./Hamlib/rigs/yaesu/ft2000.c
  ./Hamlib/rigs/yaesu/ft857.c
  ./Hamlib/rigs/yaesu/ft897.c
  ./Hamlib/rigs/yaesu/ft847.c
  ./Hamlib/rigs/yaesu/ft757gx.c
  ./Hamlib/rigs/yaesu/newcat.c
  ./Hamlib/rigs/yaesu/ft600.c
  ./Hamlib/rigs/yaesu/ft920.c
  ./Hamlib/rigs/yaesu/ft736.c
  ./Hamlib/rigs/yaesu/ft840.c
  ./Hamlib/rigs/yaesu/ft1000mp.c
  ./Hamlib/rigs/yaesu/ft890.c
  ./Hamlib/rigs/yaesu/ftdx10.c
  ./Hamlib/rigs/yaesu/ft5000.c
  ./Hamlib/rigs/yaesu/ftdx101mp.c
  ./Hamlib/rigs/yaesu/ft817.c
  ./Hamlib/rigs/yaesu/ft1000d.c
  ./Hamlib/rigs/yaesu/yaesu.c
  ./Hamlib/rigs/yaesu/ft450.c
  ./Hamlib/rigs/yaesu/ft900.c
  ./Hamlib/rigs/yaesu/vr5000.c
  ./Hamlib/rigs/yaesu/ft1200.c
  ./Hamlib/rigs/yaesu/frg8800.c
  ./Hamlib/rigs/yaesu/ft100.c
  ./Hamlib/rigs/yaesu/frg100.c
  ./Hamlib/rigs/yaesu/ft3000.c
  ./Hamlib/rigs/yaesu/ft991.c
  ./Hamlib/rigs/yaesu/ft9000.c
  ./Hamlib/rigs/yaesu/ftdx101.c
  ./Hamlib/rigs/yaesu/ft767gx.c
  ./Hamlib/rigs/yaesu/ft980.c
  ./Hamlib/rigs/yaesu/ft950.c
  ./Hamlib/rigs/yaesu/ft747.c
  ./Hamlib/rigs/yaesu/vx1700.c
  ./Hamlib/rigs/yaesu/ft891.c
  ./Hamlib/rigs/icom/ic2730.c
  ./Hamlib/rigs/icom/id5100.c
  ./Hamlib/rigs/icom/id51.c
  ./Hamlib/rigs/icom/delta2.c
  ./Hamlib/rigs/icom/ic7700.c
  ./Hamlib/rigs/icom/ic765.c
  ./Hamlib/rigs/icom/ic970.c
  ./Hamlib/rigs/icom/ic271.c
  ./Hamlib/rigs/icom/ic7410.c
  ./Hamlib/rigs/icom/ic726.c
  ./Hamlib/rigs/icom/ic785x.c
  ./Hamlib/rigs/icom/ic738.c
  ./Hamlib/rigs/icom/ic735.c
  ./Hamlib/rigs/icom/ic821h.c
  ./Hamlib/rigs/icom/ic718.c
  ./Hamlib/rigs/icom/ic737.c
  ./Hamlib/rigs/icom/os535.c
  ./Hamlib/rigs/icom/ic9100.c
  ./Hamlib/rigs/icom/id4100.c
  ./Hamlib/rigs/icom/ic746.c
  ./Hamlib/rigs/icom/ic725.c
  ./Hamlib/rigs/icom/optoscan.c
  ./Hamlib/rigs/icom/icr72.c
  ./Hamlib/rigs/icom/icr6.c
  ./Hamlib/rigs/icom/frame.c
  ./Hamlib/rigs/icom/ic781.c
  ./Hamlib/rigs/icom/ic751.c
  ./Hamlib/rigs/icom/ic7300.c
  ./Hamlib/rigs/icom/ic707.c
  ./Hamlib/rigs/icom/ic7200.c
  ./Hamlib/rigs/icom/os456.c
  ./Hamlib/rigs/icom/icr10.c
  ./Hamlib/rigs/icom/ic475.c
  ./Hamlib/rigs/icom/ic703.c
  ./Hamlib/rigs/icom/icr20.c
  ./Hamlib/rigs/icom/icr9000.c
  ./Hamlib/rigs/icom/ic471.c
  ./Hamlib/rigs/icom/ic756.c
  ./Hamlib/rigs/icom/icr7000.c
  ./Hamlib/rigs/icom/ic7100.c
  ./Hamlib/rigs/icom/ic706.c
  ./Hamlib/rigs/icom/ic910.c
  ./Hamlib/rigs/icom/ic761.c
  ./Hamlib/rigs/icom/icrx7.c
  ./Hamlib/rigs/icom/ic736.c
  ./Hamlib/rigs/icom/icf8101.c
  ./Hamlib/rigs/icom/id1.c
  ./Hamlib/rigs/icom/id31.c
  ./Hamlib/rigs/icom/ic92d.c
  ./Hamlib/rigs/icom/icr8600.c
  ./Hamlib/rigs/icom/ic7000.c
  ./Hamlib/rigs/icom/ic820h.c
  ./Hamlib/rigs/icom/ic7600.c
  ./Hamlib/rigs/icom/icr75.c
  ./Hamlib/rigs/icom/ic78.c
  ./Hamlib/rigs/icom/ic7800.c
  ./Hamlib/rigs/icom/ic7610.c
  ./Hamlib/rigs/icom/omni.c
  ./Hamlib/rigs/icom/ic1275.c
  ./Hamlib/rigs/icom/perseus.c
  ./Hamlib/rigs/icom/icr9500.c
  ./Hamlib/rigs/icom/xiegu.c
  ./Hamlib/rigs/icom/icr30.c
  ./Hamlib/rigs/icom/ic775.c
  ./Hamlib/rigs/icom/ic275.c
  ./Hamlib/rigs/icom/icr71.c
  ./Hamlib/rigs/icom/icom.c
  ./Hamlib/rigs/icom/icr8500.c
  ./Hamlib/rigs/icom/ic728.c
  ./Hamlib/rigs/skanti/trp8000.c
  ./Hamlib/rigs/skanti/trp8255.c
  ./Hamlib/rigs/skanti/skanti.c
  ./Hamlib/rigs/racal/racal.c
  ./Hamlib/rigs/racal/ra3702.c
  ./Hamlib/rigs/racal/ra6790.c
  ./Hamlib/rigs/racal/ra37xx.c
  ./Hamlib/rigs/prm80/prm8060.c
  ./Hamlib/rigs/prm80/prm80.c
  ./Hamlib/rigs/jrc/nrd545.c
  ./Hamlib/rigs/jrc/jst145.c
  ./Hamlib/rigs/jrc/nrd525.c
  ./Hamlib/rigs/jrc/jrc.c
  ./Hamlib/rigs/jrc/nrd535.c
  ./Hamlib/rigs/aor/ar5000.c
  ./Hamlib/rigs/aor/sr2200.c
  ./Hamlib/rigs/aor/ar8600.c
  ./Hamlib/rigs/aor/ar8000.c
  ./Hamlib/rigs/aor/ar3000.c
  ./Hamlib/rigs/aor/ar3030.c
  ./Hamlib/rigs/aor/aor.c
  ./Hamlib/rigs/aor/ar7030.c
  ./Hamlib/rigs/aor/ar7030p_utils.c
  ./Hamlib/rigs/aor/ar7030p.c
  ./Hamlib/rigs/aor/ar8200.c
  ./Hamlib/rigs/aor/ar2700.c
  ./Hamlib/rigs/adat/adat.c
  ./Hamlib/rigs/adat/adt_200a.c
  ./Hamlib/rigs/icmarine/icm802.c
  ./Hamlib/rigs/icmarine/icm700pro.c
  ./Hamlib/rigs/icmarine/icm803.c
  ./Hamlib/rigs/icmarine/icm710.c
  ./Hamlib/rigs/icmarine/icmarine.c
  ./Hamlib/rigs/tentec/tentec2.c
  ./Hamlib/rigs/tentec/paragon.c
  ./Hamlib/rigs/tentec/rx340.c
  ./Hamlib/rigs/tentec/pegasus.c
  ./Hamlib/rigs/tentec/rx331.c
  ./Hamlib/rigs/tentec/rx320.c
  ./Hamlib/rigs/tentec/jupiter.c
  ./Hamlib/rigs/tentec/tentec.c
  ./Hamlib/rigs/tentec/omnivii.c
  ./Hamlib/rigs/tentec/argonaut.c
  ./Hamlib/rigs/tentec/tt550.c
  ./Hamlib/rigs/tentec/orion.c
  ./Hamlib/rigs/tentec/rx350.c
  ./Hamlib/rigs/barrett/4050.c
  ./Hamlib/rigs/barrett/950.c
  ./Hamlib/rigs/barrett/barrett.c
  ./Hamlib/rigs/tuner/v4l2.c
  ./Hamlib/rigs/tuner/tuner.c
  ./Hamlib/rigs/tuner/v4l.c
  ./Hamlib/rigs/drake/r8b.c
  ./Hamlib/rigs/drake/drake.c
  ./Hamlib/rigs/drake/r8a.c
  ./Hamlib/rigs/dummy/netrotctl.c
  ./Hamlib/rigs/dummy/netampctl.c
  ./Hamlib/rigs/dummy/netrigctl.c
  ./Hamlib/rigs/dummy/rot_dummy.c
  ./Hamlib/rigs/dummy/amp_dummy.c
  ./Hamlib/rigs/dummy/dummy_common.c
  ./Hamlib/rigs/dummy/dummy.c
  ./Hamlib/rigs/dummy/trxmanager.c
  ./Hamlib/rigs/dummy/tci1x.c
  ./Hamlib/rigs/dummy/flrig.c
  ./Hamlib/rigs/codan/codan.c
  ./Hamlib/rigs/kachina/505dsp.c
  ./Hamlib/rigs/kachina/kachina.c
  ./Hamlib/rigs/winradio/wr3100.c
  ./Hamlib/rigs/winradio/winradio.c
  ./Hamlib/rigs/winradio/wr3700.c
  ./Hamlib/rigs/winradio/wr3150.c
  ./Hamlib/rigs/winradio/wr3500.c
  ./Hamlib/rigs/winradio/wr1000.c
  ./Hamlib/rigs/winradio/g313-win.c
  ./Hamlib/rigs/winradio/g305.c
  ./Hamlib/rigs/winradio/wr1500.c
  ./Hamlib/rigs/winradio/g303.c
  ./Hamlib/rigs/winradio/wr1550.c
  ./Hamlib/extra/gnuradio/mc4020.c
  ./Hamlib/extra/gnuradio/graudio.c
  ./Hamlib/extra/gnuradio/gr.c
  ./Hamlib/lib/getopt.c
  ./Hamlib/lib/getopt_long.c
  ./Hamlib/lib/usleep.c
  ./Hamlib/lib/gettimeofday.c
  ./Hamlib/lib/getaddrinfo.c
  ./Hamlib/lib/termios.c
  ./Hamlib/lib/dummy.c
  ./Hamlib/lib/asyncpipe.c
  ./Hamlib/lib/cJSON.c
  ./Hamlib/android/ltdl.c
  ./Hamlib/simulators/simft991.c
  ./Hamlib/simulators/simyaesu.c
  ./Hamlib/simulators/simicom.c
  ./Hamlib/simulators/simkenwood.c
  ./Hamlib/simulators/simelecraft.c
  ./Hamlib/rotators/indi/indi.c
  ./Hamlib/rotators/ether6/ether6.c
  ./Hamlib/rotators/sartek/sartek.c
  ./Hamlib/rotators/easycomm/easycomm.c
  ./Hamlib/rotators/amsat/if100.c
  ./Hamlib/rotators/radant/radant.c
  ./Hamlib/rotators/ts7400/ts7400.c
  ./Hamlib/rotators/ts7400/include/readADC.c
  ./Hamlib/rotators/ts7400/include/io.c
  ./Hamlib/rotators/ts7400/include/test7400ADC.c
  ./Hamlib/rotators/ts7400/include/peekpoke.c
  ./Hamlib/rotators/gs232a/gs232a.c
  ./Hamlib/rotators/gs232a/gs232.c
  ./Hamlib/rotators/gs232a/gs232b.c
  ./Hamlib/rotators/satel/satel.c
  ./Hamlib/rotators/m2/rc2800.c
  ./Hamlib/rotators/ars/ars.c
  ./Hamlib/rotators/ioptron/rot_ioptron.c
  ./Hamlib/rotators/fodtrack/fodtrack.c
  ./Hamlib/rotators/meade/meade.c
  ./Hamlib/rotators/prosistel/prosistel.c
  ./Hamlib/rotators/cnctrk/cnctrk.c
  ./Hamlib/rotators/spid/spid.c
  ./Hamlib/rotators/rotorez/rotorez.c
  ./Hamlib/rotators/heathkit/hd1780.c
  ./Hamlib/rotators/celestron/celestron.c
PRIV_INCLUDE_DIRS
  include
  Hamlib/include
  Hamlib/src
  Hamlib/lib
PRIV_REQUIRES
  driver
  newlib
)
